1.2.3i1:
    Core:
    * Agents can send data for other hosts "piggyback". This is being
      used by the vSphere and SAP plugins

    Multisite:
    * New availability view for arbitrary host/service collections

    Event Console:
    * New rule feature: automatically delete event after actions

    Checks & Agents:
    * solaris_mem: New check for memory and swap for Solaris agent
    * New special agent agent_vsphere for monitoring ESX (VMware) Hosts
      via vSphere interface
    * new special agent agent_random for creating random monitoring data
    * New checks: windows_intel_bonding / windows_broadcom_bonding
    * cisco_qos: adhere qos-bandwidth policies
    * Implemented SAP monitoring based on the agent plugin mk_sap. This
      must be run on a linux host. It connects via RFC calls to SAP R/3
      systems to retrieve monitoring information for this or other machines.
    * sap.dialog: Monitors SAP dialog statistics like the response time
    * sap.value: Simply processes information provided by SAP to Nagios

    BI:
    * Integrated availability computing, including nifty time warp feature

    WATO:
    * Configuration of datasource programs via dedicated rules
    * New editor for Business Intelligence rules
    * Valuespec: CascadingDropdown now able to process choice values from functions

1.2.2b4:
    Core:
    * FIX: Fix output of cmk -D: datasource programs were missing
    * FIX: allow unicode encoded extra_service_conf
    * FIX: no default PING service if custom checks are defined
    * FIX: check_mk_base: fixed rounding error in get_bytes_human_readable
    * New configuration variable contactgroup_members

    Checks & Agents:
    * FIX: smart - not trying to parse unhandled lines to prevent errors
    * FIX: winperf_processor - fixed wrong calculations of usage
    * FIX: WATO configuration of filesystem trends: it's hours, not days!
    * FIX: mysql: fixed crash on computing IO information